--- a/f4.html
+++ b/f4.html
@@ -9,9 +9,9 @@
   <!-- ScrollReveal -->
   <script src="https://unpkg.com/scrollreveal"></script>
 </head>
-<body class="bg-blue-800 text-gray-100 font-sans"> <!-- Fondo azul BWT -->
+<body class="bg-blue-800 text-gray-100 font-sans">
 
-  <!-- Header / Menú superior (misma estructura que F2/F3) -->
+  <!-- Header -->
   <header class="bg-pink-600 text-white p-4 flex justify-between items-center">
     <h1 class="text-lg font-bold">Alpine Academy</h1>
     <nav>
@@ -24,7 +24,7 @@
         <li><a href="f5.html" class="hover:text-blue-200">F5</a></li>
         <li><a href="k6.html" class="hover:text-blue-200">K6</a></li>
       </ul>
-      <!-- Hamburguesa móvil -->
+      <!-- Hamburguesa -->
       <div class="md:hidden">
         <button id="menu-btn" class="focus:outline-none" aria-label="Abrir menú">
           <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -36,7 +36,7 @@
     </nav>
   </header>
 
-  <!-- Menú móvil (mismo comportamiento que F2/F3, se cierra al hacer clic) -->
+  <!-- Menú móvil -->
   <div id="menu" class="hidden md:hidden bg-pink-600 text-white p-4 space-y-3">
     <a href="index.html" class="block">Inicio</a>
     <a href="f1.html" class="block">F1</a>
@@ -49,24 +49,24 @@
 
   <!-- Contenido -->
   <main class="max-w-6xl mx-auto p-6">
-    <!-- Logo + Título (idéntico layout a F2/F3) -->
+    <!-- Logo + Título -->
     <div class="flex items-center space-x-4 mb-8">
       <img src="https://i.imgur.com/mcIjDcB.jpeg" alt="Logo F4 BWT" class="w-20 h-20 rounded-lg shadow-lg">
-      <h2 class="text-3xl font-extrabold text-pink-300">Alpine BWT F4</h2>
+      <h2 class="text-3xl font-extrabold text-pink-400">Alpine BWT F4</h2>
     </div>
 
-    <!-- Resumen del equipo -->
+    <!-- Resumen -->
     <p class="text-lg mb-10 leading-relaxed text-blue-100">
       El campeonato de <b>F4</b> es la base de formación de la Alpine Academy. Con el respaldo de <b>BWT</b>,
       esta categoría combina desarrollo y competitividad para preparar a nuestros talentos antes del salto a F3/F2/F1.
     </p>
 
     <!-- Pilotos -->
-    <h2 class="text-2xl font-bold mb-6 text-pink-300">👨‍✈️ Pilotos Titulares</h2>
+    <h2 class="text-2xl font-bold mb-6 text-pink-400">👨‍✈️ Pilotos Titulares</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
       <!-- Matías Moreno -->
       <div class="bg-blue-700 text-white p-4 rounded-xl shadow-lg text-center">
-        <img src="https://dummyimage.com/400x400/1e3a8a/ffffff&text=Mat%C3%ADas+Moreno" alt="Matías Moreno"
+        <img src="https://i.imgur.com/oHAIZNs.jpeg" alt="Matías Moreno"
              class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
         <h3 class="font-bold text-lg">Matías Moreno</h3>
         <p class="text-sm">
@@ -77,7 +77,7 @@
 
       <!-- Lautaro Carballo -->
       <div class="bg-blue-700 text-white p-4 rounded-xl shadow-lg text-center">
-        <img src="https://dummyimage.com/400x400/1e3a8a/ffffff&text=Lautaro+Carballo" alt="Lautaro Carballo"
+        <img src="https://i.imgur.com/iZvs6Sq.jpeg" alt="Lautaro Carballo"
              class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
         <h3 class="font-bold text-lg">Lautaro Carballo</h3>
         <p class="text-sm">
@@ -88,7 +88,7 @@
 
       <!-- Martín Elías -->
       <div class="bg-blue-700 text-white p-4 rounded-xl shadow-lg text-center">
-        <img src="https://dummyimage.com/400x400/1e3a8a/ffffff&text=Mart%C3%ADn+El%C3%ADas" alt="Martín Elías"
+        <img src="https://i.imgur.com/cifqFkx.jpeg" alt="Martín Elías"
              class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
         <h3 class="font-bold text-lg">Martín Elías</h3>
         <p class="text-sm">
@@ -99,7 +99,7 @@
 
       <!-- Alex Núñez -->
       <div class="bg-blue-700 text-white p-4 rounded-xl shadow-lg text-center">
-        <img src="https://dummyimage.com/400x400/1e3a8a/ffffff&text=Alex+N%C3%BA%C3%B1ez" alt="Alex Núñez"
+        <img src="https://i.imgur.com/uNdRAHj.jpeg" alt="Alex Núñez"
              class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
         <h3 class="font-bold text-lg">Alex Núñez</h3>
         <p class="text-sm">
@@ -109,13 +109,13 @@
       </div>
     </div>
 
-    <!-- Trofeos (mismo bloque y estilo que F2/F3) -->
+    <!-- Trofeos -->
     <section class="trophies bg-pink-600 text-white p-6 rounded-2xl shadow-lg mt-12">
       <h2 class="text-2xl font-bold mb-6 text-blue-100">🏆 Trofeos Históricos F4</h2>
 
       <!-- Pilotos -->
       <h3 class="text-xl font-semibold mb-2 text-blue-50">Pilotos</h3>
-      <ul class="list-disc list-inside space-y-1 mb-4 text-white">
+      <ul class="list-disc list-inside space-y-1 mb-4">
         <li>🏆 T49 – Primer Campeón: Christian Horny</li>
         <li>🏆 T51 – WDC: Antonio Villalba</li>
         <li>🏆 T59 – WDC: Marco Caracciolo</li>
@@ -124,7 +124,7 @@
 
       <!-- Constructores -->
       <h3 class="text-xl font-semibold mb-2 text-blue-50">Constructores</h3>
-      <ul class="list-disc list-inside space-y-1 mb-4 text-white">
+      <ul class="list-disc list-inside space-y-1 mb-4">
         <li>🏆 T49 – Citroën Academy</li>
         <li>🏆 T58 – Alpine Academy</li>
         <li>🏆 T66 – Alpine</li>
@@ -132,39 +132,39 @@
 
       <!-- Copas Internacionales -->
       <h3 class="text-xl font-semibold mb-2 text-blue-50">Copas Internacionales</h3>
-      <ul class="list-disc list-inside space-y-1 mb-4 text-white">
+      <ul class="list-disc list-inside space-y-1 mb-4">
         <li>🏆 T51 – Real Cup: Antonio Villalba</li>
         <li>🏆 T63 – Real Cup: Lucas Mazacotte</li>
       </ul>
 
       <!-- Copas Promesas / Juveniles -->
       <h3 class="text-xl font-semibold mb-2 text-blue-50">Copas Promesas / Juveniles</h3>
-      <ul class="list-disc list-inside space-y-1 mb-4 text-white">
+      <ul class="list-disc list-inside space-y-1 mb-4">
         <li>🏆 T61 – Copa Promises: Diego Redondo</li>
         <li>🏆 T62 – Copa Promises: Iván Leiva</li>
       </ul>
 
       <!-- Otros logros -->
       <h3 class="text-xl font-semibold mb-2 text-blue-50">Otros logros</h3>
-      <ul class="list-disc list-inside space-y-1 text-white">
+      <ul class="list-disc list-inside space-y-1">
         <li>🥈 T61 – Silver League: Alpine Academy</li>
       </ul>
     </section>
   </main>
 
-  <!-- Footer (mismo patrón) -->
+  <!-- Footer -->
   <footer class="bg-pink-600 text-white p-4 text-center mt-12">
     <p>© 2025 Alpine BWT F4 - Alpine Academy</p>
   </footer>
 
   <script>
-    // Menú hamburguesa (igual que F2/F3: toggle + cerrar al pulsar link)
+    // Menú móvil
     const btn = document.getElementById('menu-btn');
     const menu = document.getElementById('menu');
     btn.addEventListener('click', () => menu.classList.toggle('hidden'));
     menu.querySelectorAll('a').forEach(a => a.addEventListener('click', () => menu.classList.add('hidden')));
 
-    // Animaciones ScrollReveal (idénticas a F2/F3)
+    // Animaciones
     ScrollReveal().reveal('.trophies', { delay: 200, distance: '50px', origin: 'bottom' });
     ScrollReveal().reveal('.grid > div', { interval: 200, distance: '50px', origin: 'bottom' });
   </script>
