--- a/f4.html
+++ b/f4.html
@@ -52,12 +52,12 @@
     <!-- Logo + Título -->
     <div class="flex items-center space-x-4 mb-8">
       <img src="https://i.imgur.com/mcIjDcB.jpeg" alt="Logo F4 BWT" class="w-20 h-20 rounded-lg shadow-lg">
-      <h2 class="text-3xl font-extrabold text-pink-400">Alpine BWT F4</h2>
+      <h2 class="text-3xl font-extrabold text-pink-400">Alpine Academy BWT F4</h2>
     </div>
 
     <!-- Resumen -->
     <p class="text-lg mb-10 leading-relaxed text-blue-100">
-      El campeonato de <b>F4</b> es la base de formación de la Alpine Academy. Con el respaldo de <b>BWT</b>,
+      El campeonato de <b>F4</b> es base en la formación de la Alpine Academy. Con el respaldo de <b>BWT</b>,
       esta categoría combina desarrollo y competitividad para preparar a nuestros talentos antes del salto a F3/F2/F1.
     </p>
 
@@ -116,7 +116,7 @@
       <!-- Pilotos -->
       <h3 class="text-xl font-semibold mb-2 text-blue-50">Pilotos</h3>
       <ul class="list-disc list-inside space-y-1 mb-4">
-        <li>🏆 T49 – Primer Campeón: Christian Horny</li>
+        <li>🏆 T49 – Primer Campeón en la historia de F4: Christian Horny</li>
         <li>🏆 T51 – WDC: Antonio Villalba</li>
         <li>🏆 T59 – WDC: Marco Caracciolo</li>
         <li>🏆 T61 – WDC: Arturo Yerena</li>
@@ -154,7 +154,7 @@
 
   <!-- Footer -->
   <footer class="bg-pink-600 text-white p-4 text-center mt-12">
-    <p>© 2025 Alpine BWT F4 - Alpine Academy</p>
+    <p>© 2025 Alpine Academy BWT F4 - Alpine Academy</p>
   </footer>
 
   <script>
