--- a/f5.html
+++ b/f5.html
@@ -1,83 +1,162 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alpine BWT Juniors - F5</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Alpine BWT F5</title>
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- ScrollReveal -->
+  <script src="https://unpkg.com/scrollreveal"></script>
 </head>
-<body class="f5-page">
+<body class="bg-gray-900 text-gray-100 font-sans">
 
-  <!-- Botón menú hamburguesa -->
-  <header>
-    <div class="menu-btn" onclick="toggleMenu()">☰</div>
-    <h1>Alpine BWT Juniors - F5</h1>
+  <!-- Header -->
+  <header class="bg-blue-700 text-white p-4 flex justify-between items-center">
+    <h1 class="text-lg font-bold">Alpine Juniors</h1>
+    <nav>
+      <ul class="hidden md:flex space-x-6">
+        <li><a href="index.html" class="hover:text-pink-300">Inicio</a></li>
+        <li><a href="f1.html" class="hover:text-pink-300">F1</a></li>
+        <li><a href="f2.html" class="hover:text-pink-300">F2</a></li>
+        <li><a href="f3.html" class="hover:text-pink-300">F3</a></li>
+        <li><a href="f4.html" class="hover:text-pink-300">F4</a></li>
+        <li><a href="f5.html" class="hover:text-pink-300">F5</a></li>
+        <li><a href="k6.html" class="hover:text-pink-300">K6</a></li>
+      </ul>
+      <!-- Hamburguesa -->
+      <div class="md:hidden">
+        <button id="menu-btn" class="focus:outline-none" aria-label="Abrir menú">
+          <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M4 6h16M4 12h16M4 18h16"/>
+          </svg>
+        </button>
+      </div>
+    </nav>
   </header>
 
-  <!-- Menú lateral -->
-  <nav id="side-menu" class="side-menu">
-    <a href="index.html">🏠 Inicio</a>
-    <a href="f1.html">F1</a>
-    <a href="f2.html">F2</a>
-    <a href="f3.html">F3</a>
-    <a href="f4.html">F4</a>
-    <a href="f5.html">F5</a>
-    <a href="k6.html">K6</a>
-    <a href="trofeos.html">🏆 Trofeos</a>
-    <a href="historia.html">📖 Historia</a>
-  </nav>
+  <!-- Menú móvil -->
+  <div id="menu" class="hidden md:hidden bg-blue-700 text-white p-4 space-y-3">
+    <a href="index.html" class="block">Inicio</a>
+    <a href="f1.html" class="block">F1</a>
+    <a href="f2.html" class="block">F2</a>
+    <a href="f3.html" class="block">F3</a>
+    <a href="f4.html" class="block">F4</a>
+    <a href="f5.html" class="block">F5</a>
+    <a href="k6.html" class="block">K6</a>
+  </div>
 
   <!-- Contenido -->
-  <main>
-    <section>
-      <h2>Pilotos Titulares</h2>
-      <div class="pilotos">
-        <div class="piloto-card">
-          <img src="img/rafael.jpg" alt="Rafael Costa">
-          <p>🇹🇷 Rafael Costa (Turquía)</p>
-        </div>
-        <div class="piloto-card">
-          <img src="img/mick.jpg" alt="Mick Sol">
-          <p>🇦🇷 Mick Sol (Argentina)</p>
-        </div>
-        <div class="piloto-card">
-          <img src="img/guido.jpg" alt="Guido Lima">
-          <p>🇵🇪 Guido Lima (Perú)</p>
-        </div>
-        <div class="piloto-card">
-          <img src="img/saul.jpg" alt="Saul González">
-          <p>🇪🇸 Saúl González (España)</p>
-        </div>
-      </div>
-    </section>
+  <main class="max-w-6xl mx-auto p-6">
+    <!-- Logo + Título -->
+    <div class="flex items-center space-x-4 mb-8">
+      <img src="https://i.imgur.com/mcIjDcB.jpeg" alt="Logo F5 BWT" class="w-20 h-20 rounded-lg shadow-lg">
+      <h2 class="text-3xl font-extrabold text-pink-400">Alpine BWT F5</h2>
+    </div>
 
-    <section>
-      <h2>Sobre el Equipo</h2>
-      <p>
-        Alpine BWT Juniors es el equipo que representa la categoría F5 en la Alpine Academy Intercontinental Series.  
-        Es la cantera más joven del programa, donde los pilotos inician su carrera dentro del universo Alpine.  
-        Sus colores predominantes son <b>rosa</b> con toques de <b>blanco</b> y <b>azul</b>.
-      </p>
+    <!-- Resumen -->
+    <p class="text-lg mb-10 leading-relaxed text-gray-300">
+      El campeonato de <b>F5</b> es el inicio de la formación en monoplazas dentro de la Alpine Academy.
+      Aquí nacen las futuras promesas del automovilismo, con apoyo de <b>BWT</b> y programas juveniles
+      que impulsan a los talentos rumbo a F4 y categorías superiores.
+    </p>
+
+    <!-- Pilotos -->
+    <h2 class="text-2xl font-bold mb-6 text-pink-400">👨‍✈️ Pilotos Titulares</h2>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
+      <!-- Rafael Costa -->
+      <div class="bg-gray-800 text-white p-4 rounded-xl shadow-lg text-center">
+        <img src="https://i.imgur.com/bpOU2LQ.jpeg" alt="Rafael Costa"
+             class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
+        <h3 class="font-bold text-lg">Rafael Costa</h3>
+        <p class="text-sm">
+          <img src="https://flagcdn.com/w20/tr.png" class="inline w-5 h-3 mr-1 align-[2px]" alt="TR">
+          Turquía
+        </p>
+      </div>
+
+      <!-- Mick Sol -->
+      <div class="bg-gray-800 text-white p-4 rounded-xl shadow-lg text-center">
+        <img src="https://i.imgur.com/uNdRAHj.jpeg" alt="Mick Sol"
+             class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
+        <h3 class="font-bold text-lg">Mick Sol</h3>
+        <p class="text-sm">
+          <img src="https://flagcdn.com/w20/ad.png" class="inline w-5 h-3 mr-1 align-[2px]" alt="AD">
+          Andorra
+        </p>
+      </div>
+
+      <!-- Guido Lima -->
+      <div class="bg-gray-800 text-white p-4 rounded-xl shadow-lg text-center">
+        <img src="https://i.imgur.com/iZvs6Sq.jpeg" alt="Guido Lima"
+             class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
+        <h3 class="font-bold text-lg">Guido Lima</h3>
+        <p class="text-sm">
+          <img src="https://flagcdn.com/w20/pe.png" class="inline w-5 h-3 mr-1 align-[2px]" alt="PE">
+          Perú
+        </p>
+      </div>
+
+      <!-- Saúl González -->
+      <div class="bg-gray-800 text-white p-4 rounded-xl shadow-lg text-center">
+        <img src="https://i.imgur.com/oHAIZNs.jpeg" alt="Saúl González"
+             class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
+        <h3 class="font-bold text-lg">Saúl González</h3>
+        <p class="text-sm">
+          <img src="https://flagcdn.com/w20/es.png" class="inline w-5 h-3 mr-1 align-[2px]" alt="ES">
+          España
+        </p>
+      </div>
+    </div>
+
+    <!-- Trofeos -->
+    <section class="trophies bg-blue-700 text-white p-6 rounded-2xl shadow-lg mt-12">
+      <h2 class="text-2xl font-bold mb-6 text-pink-300">🏆 Trofeos Históricos F5</h2>
+
+      <!-- Pilotos -->
+      <h3 class="text-xl font-semibold mb-2 text-white">Pilotos</h3>
+      <ul class="list-disc list-inside space-y-1 mb-4">
+        <li>🏆 T55 – WDC: Ignacio Chirioni</li>
+        <li>🏆 T63 – WDC: Leandro Fernández</li>
+      </ul>
+
+      <!-- Constructores -->
+      <h3 class="text-xl font-semibold mb-2 text-white">Constructores</h3>
+      <ul class="list-disc list-inside space-y-1 mb-4">
+        <li>🏆 T59 – Andretti</li>
+      </ul>
+
+      <!-- Copas Promesas -->
+      <h3 class="text-xl font-semibold mb-2 text-white">Copas Promesas</h3>
+      <ul class="list-disc list-inside space-y-1 mb-4">
+        <li>🏆 T56 – Sebas Ramírez</li>
+      </ul>
+
+      <!-- Ligas Juveniles -->
+      <h3 class="text-xl font-semibold mb-2 text-white">Ligas Juveniles</h3>
+      <ul class="list-disc list-inside space-y-1">
+        <li>🥉 T59 – Bronze League: Andretti</li>
+        <li>🥉 T62 – Bronze League: Alpine Juniors</li>
+      </ul>
     </section>
   </main>
 
-  <footer>
-    <p>⚡ Alpine Academy Intercontinental Series – Basado en iGPManager ⚡</p>
-    <p>Herederos: Leandro Fernández & Angelo Lemus</p>
+  <!-- Footer -->
+  <footer class="bg-blue-700 text-white p-4 text-center mt-12">
+    <p>© 2025 Alpine BWT F5 - Alpine Academy</p>
   </footer>
 
   <script>
-    function toggleMenu() {
-      const menu = document.getElementById('side-menu');
-      menu.classList.toggle('open');
-    }
-    // cerrar el menú al hacer clic en un enlace
-    document.querySelectorAll('.side-menu a').forEach(link => {
-      link.addEventListener('click', () => {
-        document.getElementById('side-menu').classList.remove('open');
-      });
-    });
-  </script>
+    // Menú móvil
+    const btn = document.getElementById('menu-btn');
+    const menu = document.getElementById('menu');
+    btn.addEventListener('click', () => menu.classList.toggle('hidden'));
+    menu.querySelectorAll('a').forEach(a => a.addEventListener('click', () => menu.classList.add('hidden')));
 
+    // Animaciones
+    ScrollReveal().reveal('.trophies', { delay: 200, distance: '50px', origin: 'bottom' });
+    ScrollReveal().reveal('.grid > div', { interval: 200, distance: '50px', origin: 'bottom' });
+  </script>
 </body>
 </html>
