--- a/f5.html
+++ b/f5.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>BWT F5</title>
+  <title>Alpine BWT F5</title>
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- ScrollReveal -->
@@ -52,14 +52,14 @@
     <!-- Logo + Título -->
     <div class="flex items-center space-x-4 mb-8">
       <img src="https://i.imgur.com/mcIjDcB.jpeg" alt="Logo F5 BWT" class="w-20 h-20 rounded-lg shadow-lg">
-      <h2 class="text-3xl font-extrabold text-pink-400">Alpine Academy BWT F5</h2>
+      <h2 class="text-3xl font-extrabold text-pink-400">Alpine Juniors BWT F5</h2>
     </div>
 
     <!-- Resumen -->
     <p class="text-lg mb-10 leading-relaxed text-blue-100">
-      La categoría <b>F5</b> representa la base inicial del automovilismo en la Alpine Academy. 
-      Con el patrocinio de <b>BWT</b>, es el primer paso donde jóvenes talentos muestran su potencial 
-      y comienzan el camino hacia F4, F3, F2 y eventualmente F1.
+      La categoría <b>F5</b> representa uno de los primeros pasos en la formación de pilotos de la <b>Alpine Academy</b>. 
+      Con el apoyo de <b>BWT</b>, combina desarrollo técnico y aprendizaje en pista, preparando a los jóvenes talentos
+      para ascender hacia las divisiones superiores.
     </p>
 
     <!-- Pilotos -->
@@ -117,40 +117,29 @@
       <!-- Pilotos -->
       <h3 class="text-xl font-semibold mb-2 text-blue-50">Pilotos</h3>
       <ul class="list-disc list-inside space-y-1 mb-4">
-        <li>🏆 T71 – Primer Campeón F5: Miguel Toro</li>
-        <li>🏆 T72 – WDC: Alejandro Jiménez</li>
+        <li>🏆 T55 – WDC F5: Ignacio Chirioni</li>
+        <li>🏆 T63 – WDC F5: Leandro Fernández</li>
       </ul>
 
       <!-- Constructores -->
       <h3 class="text-xl font-semibold mb-2 text-blue-50">Constructores</h3>
       <ul class="list-disc list-inside space-y-1 mb-4">
-        <li>🏆 T71 – Citroën Academy</li>
-        <li>🏆 T73 – Alpine Academy</li>
-      </ul>
-
-      <!-- Copas Internacionales -->
-      <h3 class="text-xl font-semibold mb-2 text-blue-50">Copas Internacionales</h3>
-      <ul class="list-disc list-inside space-y-1 mb-4">
-        <li>🏆 T72 – Real Cup: Alejandro Jiménez</li>
+        <li>🏆 T59 – Constructores F5: Andretti</li>
       </ul>
 
       <!-- Copas Promesas / Juveniles -->
       <h3 class="text-xl font-semibold mb-2 text-blue-50">Copas Promesas / Juveniles</h3>
       <ul class="list-disc list-inside space-y-1 mb-4">
-        <li>🏆 T72 – Copa Promises: Diego Moreno</li>
-      </ul>
-
-      <!-- Otros logros -->
-      <h3 class="text-xl font-semibold mb-2 text-blue-50">Otros logros</h3>
-      <ul class="list-disc list-inside space-y-1">
-        <li>🥈 T72 – Silver League: Alpine Academy</li>
+        <li>🏆 T56 – Copa Promises F5: Sebas Ramírez</li>
+        <li>🏆 T59 – Bronze League F5: Andretti</li>
+        <li>🏆 T62 – Bronze League F5: Alpine Juniors</li>
       </ul>
     </section>
   </main>
 
   <!-- Footer -->
   <footer class="bg-pink-600 text-white p-4 text-center mt-12">
-    <p>© 2025 Alpine Academy BWT F5 - Alpine Academy</p>
+    <p>© 2025 Alpine Juniors BWT F5 - Alpine Academy</p>
   </footer>
 
   <script>
