--- a/f5.html
+++ b/f5.html
@@ -124,14 +124,14 @@
       <!-- Constructores -->
       <h3 class="text-xl font-semibold mb-2 text-blue-50">Constructores</h3>
       <ul class="list-disc list-inside space-y-1 mb-4">
-        <li>🏆 T59 – Constructores F5: Andretti</li>
+        <li>🏆 T59 – Constructores F5: </li>
       </ul>
 
       <!-- Copas Promesas / Juveniles -->
       <h3 class="text-xl font-semibold mb-2 text-blue-50">Copas Promesas / Juveniles</h3>
       <ul class="list-disc list-inside space-y-1 mb-4">
-        <li>🏆 T56 – Copa Promises F5: Sebas Ramírez</li>
-        <li>🏆 T59 – Bronze League F5: Andretti</li>
+        <li>🏆 T56 – Copa Promises F5: Sebastian Ramírez</li>
+        <li>🏆 T59 – Bronze League F5: Alpine Academy</li>
         <li>🏆 T62 – Bronze League F5: Alpine Juniors</li>
       </ul>
     </section>
