--- a/k6.html
+++ b/k6.html
@@ -1,79 +1,128 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alpine Galaxy - K6</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Alpine K6</title>
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- ScrollReveal -->
+  <script src="https://unpkg.com/scrollreveal"></script>
 </head>
-<body class="k6-page">
+<body class="bg-blue-900 text-gray-100 font-sans">
 
-  <!-- Botón menú hamburguesa -->
-  <header>
-    <div class="menu-btn" onclick="toggleMenu()">☰</div>
-    <h1>Alpine Galaxy - K6</h1>
+  <!-- Header -->
+  <header class="bg-pink-600 text-white p-4 flex justify-between items-center">
+    <h1 class="text-lg font-bold">Alpine Academy</h1>
+    <nav>
+      <ul class="hidden md:flex space-x-6">
+        <li><a href="index.html" class="hover:text-blue-200">Inicio</a></li>
+        <li><a href="f1.html" class="hover:text-blue-200">F1</a></li>
+        <li><a href="f2.html" class="hover:text-blue-200">F2</a></li>
+        <li><a href="f3.html" class="hover:text-blue-200">F3</a></li>
+        <li><a href="f4.html" class="hover:text-blue-200">F4</a></li>
+        <li><a href="f5.html" class="hover:text-blue-200">F5</a></li>
+        <li><a href="k6.html" class="hover:text-blue-200">K6</a></li>
+      </ul>
+      <!-- Hamburguesa -->
+      <div class="md:hidden">
+        <button id="menu-btn" class="focus:outline-none" aria-label="Abrir menú">
+          <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M4 6h16M4 12h16M4 18h16"/>
+          </svg>
+        </button>
+      </div>
+    </nav>
   </header>
 
-  <!-- Menú lateral -->
-  <nav id="side-menu" class="side-menu">
-    <a href="index.html">🏠 Inicio</a>
-    <a href="f1.html">F1</a>
-    <a href="f2.html">F2</a>
-    <a href="f3.html">F3</a>
-    <a href="f4.html">F4</a>
-    <a href="f5.html">F5</a>
-    <a href="k6.html">K6</a>
-    <a href="trofeos.html">🏆 Trofeos</a>
-    <a href="historia.html">📖 Historia</a>
-  </nav>
+  <!-- Menú móvil -->
+  <div id="menu" class="hidden md:hidden bg-pink-600 text-white p-4 space-y-3">
+    <a href="index.html" class="block">Inicio</a>
+    <a href="f1.html" class="block">F1</a>
+    <a href="f2.html" class="block">F2</a>
+    <a href="f3.html" class="block">F3</a>
+    <a href="f4.html" class="block">F4</a>
+    <a href="f5.html" class="block">F5</a>
+    <a href="k6.html" class="block">K6</a>
+  </div>
 
   <!-- Contenido -->
-  <main>
-    <section>
-      <h2>Pilotos Titulares</h2>
-      <div class="pilotos">
-        <div class="piloto-card">
-          <img src="img/ryoga.jpg" alt="Ryoga Arias">
-          <p>🇵🇪 Ryoga Arias (Perú)</p>
-        </div>
-        <div class="piloto-card">
-          <img src="img/juanpa.jpg" alt="Juampa Velázquez">
-          <p>🇦🇷 Juampa Velázquez (Argentina)</p>
-        </div>
-        <div class="piloto-card">
-          <img src="img/marcos.jpg" alt="Marcos Ezequiel">
-          <p>🇦🇷 Marcos Ezequiel (Argentina)</p>
-        </div>
-      </div>
-    </section>
+  <main class="max-w-6xl mx-auto p-6">
+    <!-- Logo + Título -->
+    <div class="flex items-center space-x-4 mb-8">
+      <img src="https://i.imgur.com/mcIjDcB.jpeg" alt="Logo K6" class="w-20 h-20 rounded-lg shadow-lg">
+      <h2 class="text-3xl font-extrabold text-pink-400">Alpine Academy K6</h2>
+    </div>
 
-    <section>
-      <h2>Sobre el Equipo</h2>
-      <p>
-        Alpine Galaxy es el equipo encargado de la categoría K6 dentro de la Alpine Academy Intercontinental Series.  
-        Representa la última fase de formación de jóvenes pilotos, preparándolos para dar el salto a categorías superiores.  
-        Sus colores predominantes son <b>rosa</b> con un toque de <b>azul</b>.
-      </p>
+    <!-- Resumen -->
+    <p class="text-lg mb-10 leading-relaxed text-blue-100">
+      La categoría <b>K6</b> representa el semillero de jóvenes talentos en la <b>Alpine Academy</b>. 
+      Es el primer escalón en el desarrollo de pilotos, enfocado en el aprendizaje y la formación de futuros campeones 
+      que buscan llegar a la élite del automovilismo.
+    </p>
+
+    <!-- Pilotos -->
+    <h2 class="text-2xl font-bold mb-6 text-pink-400">👨‍✈️ Pilotos Titulares</h2>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+      <!-- Ryoga Arias -->
+      <div class="bg-blue-800 text-white p-4 rounded-xl shadow-lg text-center">
+        <img src="https://i.imgur.com/iZvs6Sq.jpeg" alt="Ryoga Arias"
+             class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
+        <h3 class="font-bold text-lg">Ryoga Arias</h3>
+        <p class="text-sm">
+          <img src="https://flagcdn.com/w20/ar.png" class="inline w-5 h-3 mr-1 align-[2px]" alt="AR">
+          Argentina
+        </p>
+      </div>
+
+      <!-- Juampa Velázquez -->
+      <div class="bg-blue-800 text-white p-4 rounded-xl shadow-lg text-center">
+        <img src="https://i.imgur.com/uNdRAHj.jpeg" alt="Juampa Velázquez"
+             class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
+        <h3 class="font-bold text-lg">Juampa Velázquez</h3>
+        <p class="text-sm">
+          <img src="https://flagcdn.com/w20/ar.png" class="inline w-5 h-3 mr-1 align-[2px]" alt="AR">
+          Argentina
+        </p>
+      </div>
+
+      <!-- Marcos Ezequiel -->
+      <div class="bg-blue-800 text-white p-4 rounded-xl shadow-lg text-center">
+        <img src="https://i.imgur.com/Nsw57er.jpeg" alt="Marcos Ezequiel"
+             class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
+        <h3 class="font-bold text-lg">Marcos Ezequiel</h3>
+        <p class="text-sm">
+          <img src="https://flagcdn.com/w20/ar.png" class="inline w-5 h-3 mr-1 align-[2px]" alt="AR">
+          Argentina
+        </p>
+      </div>
+    </div>
+
+    <!-- Trofeos -->
+    <section class="trophies bg-pink-600 text-white p-6 rounded-2xl shadow-lg mt-12">
+      <h2 class="text-2xl font-bold mb-6 text-blue-100">🏆 Trofeos Históricos K6</h2>
+
+      <!-- Placeholder -->
+      <p class="text-blue-50">Aún no hay registros históricos de trofeos en la categoría K6.</p>
     </section>
   </main>
 
-  <footer>
-    <p>⚡ Alpine Academy Intercontinental Series – Basado en iGPManager ⚡</p>
-    <p>Herederos: Leandro Fernández & Angelo Lemus</p>
+  <!-- Footer -->
+  <footer class="bg-pink-600 text-white p-4 text-center mt-12">
+    <p>© 2025 Alpine Academy K6 - Alpine Academy</p>
   </footer>
 
   <script>
-    function toggleMenu() {
-      const menu = document.getElementById('side-menu');
-      menu.classList.toggle('open');
-    }
-    // cerrar el menú al hacer clic en un enlace
-    document.querySelectorAll('.side-menu a').forEach(link => {
-      link.addEventListener('click', () => {
-        document.getElementById('side-menu').classList.remove('open');
-      });
-    });
-  </script>
+    // Menú móvil
+    const btn = document.getElementById('menu-btn');
+    const menu = document.getElementById('menu');
+    btn.addEventListener('click', () => menu.classList.toggle('hidden'));
+    menu.querySelectorAll('a').forEach(a => a.addEventListener('click', () => menu.classList.add('hidden')));
 
+    // Animaciones
+    ScrollReveal().reveal('.trophies', { delay: 200, distance: '50px', origin: 'bottom' });
+    ScrollReveal().reveal('.grid > div', { interval: 200, distance: '50px', origin: 'bottom' });
+  </script>
 </body>
 </html>
