--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <li><a href="f4.html">F4</a></li>
         <li><a href="f5.html">F5</a></li>
         <li><a href="k6.html">K6</a></li>
-        <li><a href="trofeos.html">Trofeos</a></li>
+        <li><a href="trofeos.html">Salon de la fama</a></li>
       </ul>
     </nav>
   </header>
